poke/testsuite/poke.pkl/map-diag-4.pk
/* { dg-do compile } */

any[] @ 0#B; /* { dg-error "" } */
